# ai-news-aggregator

./: .env.example  README.md  main.py  pyproject.toml  scheduler.py
app/: config.py  daily_runner.py  settings.py
app/agent/: prompts.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/digest/: service.py
app/email/: sender.py
app/ingest/: pipeline.py
app/llm/: summarizer.py
app/scrapers/rss/: client.py
app/scrapers/web/: fetcher.py
app/sources/: registry.py
app/web/: server.py
app/web/static/: styles.css
app/web/templates/: dashboard.html
docker/postgres/: docker-compose.yml
docker/postgres/init/: 001_extensions.sql
